--- a/mod/details-styles.css
+++ b/mod/details-styles.css
@@ -21,6 +21,7 @@ h1 {
     padding: 20px;
     border-radius: 8px;
     margin-bottom: 30px;
+    position: relative;
 }
 .key-details p {
     margin: 10px 0;
@@ -86,4 +87,31 @@ h1 {
     .container {
         padding: 20px;
     }
+}
+
+.copy-discord-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.print-btn{
+    float: right;
+    background-color: #007bff; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    padding: 5px 10px; 
+    cursor: pointer;
+    font-size: 24px;
+    margin-top: 5px;
+}
+.general-section{
+    position: relative;
 }
