--- a/helper/details-styles.css
+++ b/helper/details-styles.css
@@ -19,6 +19,7 @@ h1 {
 }
 
 .key-details {
+    position: relative;
     background-color: #83a01d; /* Helper primary color */
     color: #fff;
     padding: 20px;
@@ -114,4 +115,32 @@ h1 {
     width: 100%; /* Full width */
     background: rgba(255, 255, 255, 0.8); /* Optional: Semi-transparent background */
     z-index: 999; /* Optional: Ensure it's above other content */
+}
+.general-section{
+    position: relative;
+}
+
+
+.copy-discord-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.print-btn{
+    float: right;
+    background-color: #007bff; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    padding: 5px 10px; 
+    cursor: pointer;
+    font-size: 24px;
+    margin-top: 5px;
 }
