--- a/protected/helper/details-styles.css
+++ b/protected/helper/details-styles.css
@@ -85,7 +85,7 @@ h1 {
 }
 
 .back-btn button {
-    background-color: #f4882c; /* Secondary color for the back button */
+    background-color: #6c8017; /* Secondary color for the back button */
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -95,7 +95,7 @@ h1 {
 }
 
 .back-btn button:hover {
-    background-color: #d67424; /* Darker shade on hover */
+    background-color: #5B6C13; /* Darker shade on hover */
 }
 
 /* Responsive design */
@@ -125,7 +125,7 @@ h1 {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #007bff;
+    background-color: #6c8017;
     color: white;
     border: none;
     border-radius: 5px;
@@ -135,7 +135,7 @@ h1 {
 
 .print-btn{
     float: right;
-    background-color: #007bff; 
+    background-color: #6c8017; 
     color: white; 
     border: none; 
     border-radius: 5px; 
@@ -143,4 +143,8 @@ h1 {
     cursor: pointer;
     font-size: 24px;
     margin-top: 5px;
+}
+
+.print-btn:hover, .copy-discord-btn:hover {
+    background-color: #5B6C13;
 }
